--- a/documentation/ddos.html
+++ b/documentation/ddos.html
@@ -53,21 +53,28 @@
 			Certains pirates informatiques se sont spécialisés dans la « levée » d’armées de « zombies », 
 			qu’ils peuvent ensuite louer à d’autres personnes ou groupes malveillants pour attaquer une cible particulière.
 		</div>
-
-		<div class ="subtitle">Comment s'en protéger ?</div>
+		<div class="box" style="width: 280px; height: 350px;">
+			<img src="../resources/images/docs/zombies.png" alt="Il y avais une image la :cry:" width="250" height="320" style="padding-top: 10px"> 
+			<p>Attaque DDOS</p>
+		</div>
+		<div class ="subtitle" style="margin-right:10rem;">Comment se protéger de ces attaques ?</div>
 		<div class ="text">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-			Nunc suscipit lorem dolor, 
-			a aliquet odio placerat in. 
-			Maecenas dui ligula, congue consectetur ante id, 
-			finibus consequat tellus. 
-			Nunc feugiat elementum arcu, 
-			nec pellentesque velit ultricies vel. 
-			Nulla odio odio, faucibus eu ante sit amet, 
-			pharetra convallis arcu. Donec ac nisi ac nisl lobortis gravida a nec augue. 
-			Cras tincidunt vehicula metus vitae lacinia. Pellentesque id luctus quam. 
-			Nullam mollis elementum diam, suscipit consectetur nisi consequat eleifend. 
-			Suspendisse cursus erat leo.
+			<li>Avoir recours a un Content Delivery Network (CDN) </li>
+			Un Content Delivery Network (CDN) est une infrastructure de serveurs répartie dans
+			plusieurs data centres, et dont l’objectif est de se substituer aux services d’une entité
+			pour servir ses contenus au plus proche des utilisateurs. Les CDN ont ainsi une fonction
+			de cache, et permettent notamment d’augmenter la disponibilité des ressources ou
+			encore d’accroître la vitesse de mise à disposition des données, généralement des
+			pages web ou des flux multimédia
+			<br>
+			<br>
+			<li> Redirection via le protocol DNS </li>
+			Certains services de protection reposent sur une redirection DNS. Le but est de diriger le
+			trafic à destination d’un domaine, comme example.com, vers l’adresse IP d’un serveur
+			du fournisseur de protection. Ce dernier se charge ensuite de filtrer le trafic, puis de le
+			rediriger vers la destination originelle. Ce modèle de fonctionnement est souvent offert
+			par des CDN pour protéger les serveurs web de leurs clients.
+
 		</div>
     </div>
 
