walidé par quentin

--- a/credits.html
+++ b/credits.html
@@ -63,15 +63,26 @@
         </div>
     </div>
 
+
+    <!-- POPUP -->
+
+    <div class="popup">
+        <div class="popup-content">
+          <span class="close">&times;</span>
+          <p>Et le projet et bien evidemment validé par Quentin !</p>
+        </div>
+      
+    </div>
+
     <footer class="footer">
 		<p>Copyright © WallHack</p>
 	</footer>
     <audio src="resources/musics/readmore.weba">aa</audio>
 
+
     <!-- Scripts -->
     
-
-	<script src="js/credits.js"></script>
+	<script src="js/main.js"></script>
     <script type="text/javascript" src="js/vanilla-tilt.js"></script>
     <script type="text/javascript">
         VanillaTilt.init(document.querySelectorAll(".card"), {
