--- a/credits.html
+++ b/credits.html
@@ -50,7 +50,7 @@
         <div class ="card">
             <div class ="content"> 
                 <h3>Merci à:</h3>
-                <p>Proxyme, pour des problemes d'apparition <br><br> Sarka, pour la clarification du métier de pintester</p>
+                <p>Proxyme, pour des problemes d'apparition <br><br> Sarka, pour la clarification du métier de pentester</p>
                 <button href id="youko">Voir plus</button>
             </div>
         </div>
