--- a/documentation.html
+++ b/documentation.html
@@ -110,7 +110,7 @@
 					<h2>Le top 10 d'OWASP</h2>
 					<p2>Qu'est ce que c'est ?</p2>
 				</br>
-					<a href="owasp.html">Lire plus</a>
+					<a href="documentation/owasp.html">Lire plus</a>
 				</div>
 			</div>
 		</div>
