--- a/accueil.html
+++ b/accueil.html
@@ -38,15 +38,20 @@
 			</li>
 		</ul>
 	</nav>
-
-	<div class="text">
-		<div class = "welcome">
-			<h1>Bienvenue sur WallHack, le site de documentation  <span id="text"></span></h1>
+	<div class="content">
+		<div class="main-logo">
+			<img src="https://via.placeholder.com/350" alt="logo" />
 		</div>
-	</div>
-	
-	<div class="intro">
-		<h2>La cybersécurité protège les données et l’intégrité des ressources informatiques connectées ou installées sur un réseau d’entreprise.</br>Elle a pour mission de défendre ces ressources contre tous les pirates, et ce tout au long du cycle d’attaque.</h2>
+		<div class="text">
+			<div class = "welcome">
+				Bienvenue sur WallHack, le site de documentation
+				<span id="text"></span>
+			</div>
+			<div class="intro">
+				La cybersécurité protège les données et l’intégrité des ressources informatiques connectées ou installées sur un réseau d’entreprise.</br>
+				Elle a pour mission de défendre ces ressources contre tous les pirates, et ce tout au long du cycle d’attaque.
+			</div>
+		</div>
 	</div>
 
 	<script src="js/accueil.js"></script>
