--- a/accueil.html
+++ b/accueil.html
@@ -40,14 +40,13 @@
 	</nav>
 	<div class="content">
 		<div class="main-logo">
-			<img src="https://via.placeholder.com/350" alt="logo" />
+			<img src="resources/images/logo/logo.png" alt="logo" />
 		</div>
 		<div class="text">
 			<div class = "welcome">
 				Bienvenue sur WallHack, le site de documentation
 				<span id="text"></span>
 			</div>
-	<br>
 			<div class="intro">
 				La cybersécurité protège les données et l’intégrité des ressources informatiques connectées ou installées sur un réseau d’entreprise.</br>
 				Elle a pour mission de défendre ces ressources contre tous les pirates, et ce tout au long du cycle d’attaque.
