--- a/accueil.html
+++ b/accueil.html
@@ -44,7 +44,7 @@
 		</div>
 		<div class="text">
 			<div class = "welcome">
-				Bienvenue sur WallHack, le site de documentation
+				Bienvenue sur WallHack, le site de documentation sur
 				<span id="text"></span>
 			</div>
 	<br>
