--- a/accueil.html
+++ b/accueil.html
@@ -47,8 +47,11 @@
 				Bienvenue sur WallHack, le site de documentation sur
 				<span id="text"></span>
 			</div>
+			</br>
+
 			<div class="intro">
-				La cybersécurité protège les données et l’intégrité des ressources informatiques connectées ou installées sur un réseau d’entreprise.</br>
+				La cybersécurité protège les données et l’intégrité des ressources informatiques connectées ou installées sur un réseau d’entreprise.
+			</br>
 				Elle a pour mission de défendre ces ressources contre tous les pirates, et ce tout au long du cycle d’attaque.
 			</div>
 		</div>
