tidic le vialain mais la c les credits

--- a/credits.html
+++ b/credits.html
@@ -69,7 +69,7 @@
     <div class="popup">
         <div class="popup-content">
           <span class="close">&times;</span>
-          <p>Et le projet et bien evidemment validé par Quentin !</p>
+          <p>Et le projet et bien evidemment <strong>Walydé</strong> par Quentin !</p>
         </div>
       
     </div>
