--- a/accueil.html
+++ b/accueil.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<title>WallHack - Accueil</title>
 	<link rel="stylesheet" type="text/css" href="css/style_accueil.css" />
+	<link rel="icon"  type="image/png"  href="favicon.png">
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="js/transition.js"></script>
 </head>
