--- a/accueil.html
+++ b/accueil.html
@@ -41,7 +41,7 @@
 	</nav>
 	<div class="content">
 		<div class="main-logo">
-			<img src="resources/images/logo/logo.png" alt="logo" />
+			<img src="resources/images/logo/logo.png" alt="logo" width="450px"/>
 		</div>
 		<div class="text">
 			<div class = "welcome">
