respect du cahier des charges\n (c'est pas beau donc a revoir)

--- a/accueil.html
+++ b/accueil.html
@@ -12,7 +12,10 @@
 
 <body>
 
-	<header class="header">WallHack - Accueil</header>
+	<header class="header">
+		<img class="header-title" src="resources/images/logo/logo-black-bg.png" width="30" style="border-radius: 8px">
+		<p class="header-title">WallHack - Accueil</p>
+	</header>
 	<div class="transition transition is-active"></div>
 
 	<nav class="navbar">
@@ -62,7 +65,7 @@
 	
 
 	<footer class="footer">
-		<p>Copyright © WallHack</p>
+		<p>Tom et Cedric 16/01/2022  Copyright © WallHack</p>
 	</footer>
 	<div id="particles-js"></div>
 	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
