--- a/credits.html
+++ b/credits.html
@@ -6,13 +6,17 @@
 	<title>WallHack - Credits</title>
 	<link rel="stylesheet" type="text/css" href="css/style_credits.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
-	<script src="js/transition.js"></script>
+	<script src="../js/transition.js"></script>
+<link rel="icon"  type="image/png"  href="../favicon.png">
+<link rel="icon"  type="image/png"  href="favicon.png">
 </head>
 
 <body>
     <div class="transition transition is-active"></div>
 
-    <header class="header">WallHack - Credits</header>
+    <header class="header">
+		<img class="header-title" src="resources/images/logo/logo-black-bold-bg.png" width="30" style="border-radius: 15px">
+		<p class="header-title">WallHack - Credits</header>
 
     <nav class="navbar">
 		<ul class="navbar-menu">
@@ -58,20 +62,40 @@
             <div class ="content"> 
                 <h3>Sources</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                <button href="#">Voir Plus</button>
+                <button href="#" id="sources">Voir Plus</button>
             </div>
         </div>
     </div>
 
 
     <!-- POPUP -->
-
-    <div class="popup">
+    <div class="popup-bg" id="sources-popupBg"></div>
+    <div class="popup" id="sources-popup">
+        <div class"popup-header">
+            <h3 align="center">Sources</h3>
+            <i class="fas fa-times close" id="sources-close"></i>
+        </div>
+        <div class="popup-divider"></div>
         <div class="popup-content">
-          <span class="close">&times;</span>
+            <p>Particules Accueil: <a href="https://vincentgarreau.com/particles.js/">vincentgarreau.com</a></p>
+            <p>Cartes qui bougent: <a href="https://gijsroge.github.io/tilt.js/">tilt.js</a></p>
+            <p>Popup modals: <a href="https://www.w3schools.com/howto/howto_css_modals.asp">w3schools.com</a></p>
+            <p>Navbar: <a href="https://youtu.be/0IDsPpVLgxI">youtube.com: Wawa Sensei</a></p>
+            <p>Page transition: <a href="https://youtu.be/ckJ7gdIeebc">youtube.com: Tyler Potts</a></p>
+        </div>
+    </div>
+
+
+    <div class="popup-bg" id="youko-popupBg"></div>
+    <div class="popup" id="youko-popup">
+        <div class"popup-header">
+            <h3 align="center">Remerciements</h3>
+            <i class="fas fa-times close" id="youko-close"></i>
+        </div>
+        <div class="popup-divider"></div>
+        <div class="popup-content">
           <p>Et le projet et bien evidemment <strong>Walydé</strong> par Quentin !</p>
         </div>
-      
     </div>
 
     <footer class="footer">
