--- a/documentation.html
+++ b/documentation.html
@@ -4,11 +4,15 @@
 	<title>WallHack - Documentation</title>
 	<link rel="stylesheet" type="text/css" href="css/style_doc.css">
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
-	<script src="js/transition.js"></script>
+	<script src="../js/transition.js"></script>
+<link rel="icon"  type="image/png"  href="../favicon.png">
+<link rel="icon"  type="image/png"  href="favicon.png">
 </head>
 
 <body>
-	<header class="header">WallHack - Documentation</header>
+	<header class="header">
+		<img class="header-title" src="resources/images/logo/logo-black-bold-bg.png" width="30" style="border-radius: 15px">
+		<p class="header-title">WallHack - Documentation</header>
 
     <nav class="navbar">
 		<ul class="navbar-menu">
