--- a/documentation/kali.html
+++ b/documentation/kali.html
@@ -7,12 +7,18 @@
 	<link rel="stylesheet" type="text/css" href="../css/documentations.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="../js/transition.js"></script>
+<link rel="icon"  type="image/png"  href="../favicon.png">
+<link rel="icon"  type="image/png"  href="../favicon.png">
+<link rel="icon"  type="image/png"  href="favicon.png">
 </head>
 
 <body>
     <div class="transition transition is-active"></div>
 
-    <header class="header">WallHack - Les OS offensifs</header>
+    <header class="header">
+		<img class="header-title" src="../resources/images/logo/logo-black-bold-bg.png" width="30" style="border-radius: 15px">
+		<p class="header-title">WallHack - Les OS offensifs</p>
+	</header>
 
     <nav class="navbar">
 		<ul class="navbar-menu">
@@ -90,9 +96,48 @@
 		</div>
     </div>
 
+	<!-- POPUP -->
+    <div class="popup-bg" id="popupBg"></div>
+    <div class="popup" id="popup">
+        <div class"popup-header">
+            <h3 align="center">Sources</h3>
+            <i class="fas fa-times close" id="close"></i>
+        </div>
+        <div class="popup-divider"></div>
+        <div class="popup-content">
+            <p>
+				Kali Linux 
+				<a href="https://fr.wikipedia.org/wiki/Kali_Linux">wikipedia</a> 
+				/ 
+				<a href="https://www.kali.org/">kali.org</a>
+			</p>
+			<p>
+				Outils
+				<a href="https://websetnet.net/fr/21-best-kali-linux-tools-for-hacking-and-penetration-testing/">websetnet.net</a> 
+				/
+				<a href="https://www.linuxadictos.com/fr/las-5-mejores-herramientas-encontraremos-kali-linux.html/">linuxadictos.com</a> 
+			</p>
+			<p>
+				Nmap
+				<a href="https://nmap.org/">nmap.org</a>
+			</p>
+			<p>
+				Metasploit
+				<a href="https://www.metasploit.com/">Metasploit</a>
+				/
+				<a href="https://docs.rapid7.com/metasploit/">Metasploit Doc</a>
+			</p>
+        </div>
+    </div>
+	<button id="sources">Voir Plus</button>
 
     <footer class="footer">
 		<p>Copyright © WallHack</p>
 	</footer>
+
+	
+	<!-- Scripts -->
+	<script src="../js/docs.js"></script>
+	
 <!-- Template by Tidic (oui j'ai le melon !) -->
 </body>
