--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>WallHack</title>
 	<link rel="stylesheet" type="text/css" href="css/style_index.css">
-	<script src="js/transition.js"></script>
+	<script src="../js/transition.js"></script>
+<link rel="icon"  type="image/png"  href="../favicon.png">
+<link rel="icon"  type="image/png"  href="favicon.png">
 </head>
 <body>
 	<div class="transition transition is-active"></div>
