--- a/accueil.html
+++ b/accueil.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style_accueil.css" />
 	<link rel="icon"  type="image/png"  href="favicon.png">
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
-	<script src="../js/transition.js"></script>
+	<script src="js/transition.js"></script>
 <link rel="icon"  type="image/png"  href="../favicon.png">
 <link rel="icon"  type="image/png"  href="favicon.png">
 </head>
