--- a/credits.html
+++ b/credits.html
@@ -6,7 +6,7 @@
 	<title>WallHack - Credits</title>
 	<link rel="stylesheet" type="text/css" href="css/style_credits.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
-	<script src="../js/transition.js"></script>
+	<script src="js/transition.js"></script>
 <link rel="icon"  type="image/png"  href="../favicon.png">
 <link rel="icon"  type="image/png"  href="favicon.png">
 </head>
