--- a/documentation.html
+++ b/documentation.html
@@ -4,7 +4,7 @@
 	<title>WallHack - Documentation</title>
 	<link rel="stylesheet" type="text/css" href="css/style_doc.css">
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
-	<script src="../js/transition.js"></script>
+	<script src="js/transition.js"></script>
 <link rel="icon"  type="image/png"  href="../favicon.png">
 <link rel="icon"  type="image/png"  href="favicon.png">
 </head>
