--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>WallHack</title>
 	<link rel="stylesheet" type="text/css" href="css/style_index.css">
-	<script src="../js/transition.js"></script>
+	<script src="js/transition.js"></script>
 <link rel="icon"  type="image/png"  href="../favicon.png">
 <link rel="icon"  type="image/png"  href="favicon.png">
 </head>
