--- a/credits.html
+++ b/credits.html
@@ -61,7 +61,7 @@
         <div class ="card">
             <div class ="content"> 
                 <h3>Sources</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                <p>Youtube: Online Tutorials</p>
                 <button href="#" id="sources">Voir Plus</button>
             </div>
         </div>
@@ -71,7 +71,7 @@
     <!-- POPUP -->
     <div class="popup-bg" id="sources-popupBg"></div>
     <div class="popup" id="sources-popup">
-        <div class"popup-header">
+        <div class="popup-header">
             <h3 align="center">Sources</h3>
             <i class="fas fa-times close" id="sources-close"></i>
         </div>
@@ -82,13 +82,14 @@
             <p>Popup modals: <a href="https://www.w3schools.com/howto/howto_css_modals.asp">w3schools.com</a></p>
             <p>Navbar: <a href="https://youtu.be/0IDsPpVLgxI">youtube.com: Wawa Sensei</a></p>
             <p>Page transition: <a href="https://youtu.be/ckJ7gdIeebc">youtube.com: Tyler Potts</a></p>
+            <p>Et pleins d'autre trucs: <a href="https://www.youtube.com/c/OnlineTutorials4Designers">youtube.com: Online Tutorials</a></p>
         </div>
     </div>
 
 
     <div class="popup-bg" id="youko-popupBg"></div>
     <div class="popup" id="youko-popup">
-        <div class"popup-header">
+        <div class="popup-header">
             <h3 align="center">Remerciements</h3>
             <i class="fas fa-times close" id="youko-close"></i>
         </div>
@@ -101,7 +102,7 @@
     <footer class="footer">
 		<p>Copyright © WallHack</p>
 	</footer>
-    <audio src="resources/musics/readmore.weba">aa</audio>
+    <audio src="resources/musics/readmore.weba"></audio>
 
 
     <!-- Scripts -->
