--- a/documentation/template.html
+++ b/documentation/template.html
@@ -87,7 +87,7 @@
 	<!-- POPUP -->
     <div class="popup-bg" id="popupBg"></div>
     <div class="popup" id="popup">
-        <div class"popup-header">
+        <div class="popup-header">
             <h3 align="center">Sources</h3>
             <i class="fas fa-times close" id="close"></i>
         </div>
