--- a/documentation/f0d.html
+++ b/documentation/f0d.html
@@ -30,13 +30,101 @@
 			Les mots vulnérabilité, 
 			faille d’exploitation et attaque accompagnent généralement le terme zero-day et ont des significations différentes :
 		</div>
-
-		<div class="subtitle">Subtitle</div>
+		<br>
+		<br>
+		<div class="subtitle">Que sont les attaques zero-day et comment fonctionnent-elles ?</div>
 		<div class="text">
-				Vulnérabilité : une faille est une faille.
-				Faille d’exploitation : une faille d’exploitation est une faille.
-				Attaque : une attaque est une attaque.
-				<!-- Texte template-->
+				Les logiciels présentent souvent des failles de sécurité que les cybercriminels peuvent exploiter pour provoquer des dégâts. Les développeurs de logiciels <br>
+				recherchent constamment les vulnérabilités à rectifier, impliquant le développement d’une solution intégrée dans une nouvelle mise à jour.<br>
+				<br>
+				Cependant, il arrive que des cybercriminels ou des acteurs malveillants détectent la vulnérabilité avant les développeurs. Même si la vulnérabilité est<br>
+				toujours présente, les cybercriminels peuvent écrire et implémenter un code pour en tirer profit. C'est ce que l'on appelle la « liaison dynamique ».
+				<br>
+				<br>
+				Le code d’exploitation peut entraîner la corruption des utilisateurs du logiciel, par exemple par le biais d’une usurpation d’identité ou d’autres formes de <br>
+				cybercrime. Une fois que les cybercriminels identifient une vulnérabilité zero-day, ils cherchent à atteindre le système vulnérable. Pour ce faire, ils utilisent <br>
+				souvent un email d’ingénierie sociale, c’est-à-dire un email ou autre message émanant d’un cybercriminel mais ayant l’aspect d’un contenant provenant d’un <br> 
+				expéditeur légitime. Le message tente de convaincre l’utilisateur d’exécuter une action, comme ouvrir un fichier ou accéder à un site Web malveillant. Une <br>
+				telle action entraîne le téléchargement du programme malveillant du cybercriminel, qui s’infiltre dans les dossiers de l’utilisateur et s’empare de ses données <br>
+				confidentielles.
+				<br>
+				<br>
+				Lorsqu’une vulnérabilité est identifiée, les développeurs tentent de la corriger pour stopper l’attaque. Cependant, les vulnérabilités de sécurité sont rarement <br>
+				détectées immédiatement. Il s’écoule parfois plusieurs jours, plusieurs semaines, voire plusieurs mois avant que les développeurs n’identifient la vulnérabilité à l’origine <br>
+				de l’attaque. Et même lorsqu’un correctif est disponible, les utilisateurs ne sont pas tous prompts à l’implémenter. Ces dernières années, les cybercriminels sont parvenus <br>
+				à exploiter les vulnérabilités très rapidement après leur détection.
+				<br>
+				<br>
+				Les failles d’exploitation peuvent être vendues sur le dark Web à des prix considérables. Une fois la faille d’exploitation détectée et rectifiée, elle n’est plus appelée « menace zero-day ».
+				<br>
+				<br>
+				Les attaques zero-day sont particulièrement dangereuses car les seules personnes qui les connaissent sont les cybercriminels eux-mêmes. Dès que les cybercriminels infiltrent un réseau, ils passent à l’attaque immédiatement ou patientent jusqu’au moment le plus avantageux.
+		</div>
+
+		<br>
+		<br>
+		<div class="subtitle">Qui lance des attaques zero-day ?</div>
+		<div class="text">
+			Les acteurs malveillants qui lancent des attaques zero-day s’inscrivent dans différentes catégories selon leur motivation : <br>
+			Par exemple :<br>
+			<br>
+			•	Cybercriminels : pirates dont la motivation est généralement financière <br>
+			•	Hacktivistes : pirates motivés par une cause politique ou sociale qui souhaitent que les attaques soient visibles pour attirer l’attention sur leur combat <br>
+			•	Espionnage industriel : pirates qui espionnent des entreprises pour obtenir des informations <br>
+			•	Guerre de l’information : acteurs nationaux ou politiques espionnant ou attaquant la cyberinfrastructure d’un autre pays <br>
+
+		</div>
+		<br>
+		<br>
+
+		<div class="subtitle">Qui les failles d’exploitation zero-day ciblent-elles ?</div>
+		<div class="text">
+			Une faille d’exploitation zero-day peut exploiter les vulnérabilités de différents systèmes, y compris : <br>
+			•	Systèmes d'exploitation <br>
+			•	Navigateurs Web <br>
+			•	Applications de bureau<br>
+			•	Renseignement de sources ouvertes<br>
+			•	Matériel et firmware<br>
+			•	Internet des objets (IoT) <br>
+			<br>
+			<br>
+			<strong>En conséquence, les victimes potentielles sont très diverses :</strong><br>
+			<br>
+			•	Les particuliers qui utilisent un système vulnérable, comme un navigateur ou un système d’exploitation. Les cybercriminels peuvent utiliser des vulnérabilités de sécurité pour compromettre les appareils et créer des botnets à grande échelle<br>
+			•	Les particuliers ayant accès à des données professionnelles sensibles, comme la propriété intellectuelle<br>
+			•	Appareils matériel, firmware et Internet des objets<br>
+			•	Grandes entreprises<br>
+			•	Agences gouvernementales<br>
+			•	Cibles politiques et/ou menaces de sécurité nationale<br>
+			<br>
+			<br>
+			<strong>Il est judicieux de réfléchir en termes d’attaques zero-day ciblées et non ciblées :</strong>
+			<br>
+			<br>
+			•	Les attaques zero-day ciblées visent des cibles potentielles intéressantes, comme les grandes entreprises, les organismes gouvernementaux ou les célébrités.<br>
+			•	Les attaques zero-day non ciblées ciblent généralement les utilisateurs de systèmes vulnérables, comme un système d’exploitation ou un navigateur.<br>
+			<br>
+			<br>
+			Même lorsque les cybercriminels ne ciblent pas d’individus spécifiques, un grand nombre de personnes peuvent être affectées par les attaques zero-day, ce qui s’apparente
+			à des dommages collatéraux. Les attaques non ciblées ont pour objectif de capturer autant d’utilisateurs que possible. Les données des utilisateurs moyens peuvent alors
+			être affectées.
+		</div>
+		<br>
+		<br>
+		<div class="subtitle">Comment identifier des attaques zero-day</div>
+		<div class="text">
+			Les vulnérabilités zero-day pouvant prendre toutes sortes de formes, comme le chiffrement manquant des données, les autorisations manquantes, les algorithmes interrompus, les bugs, les problèmes de sécurité des mots de passe, etc., ils peuvent être difficiles à détecter. En raison de la nature de ce type de vulnérabilités, les informations précises sur les failles d’exploitation zero-day ne sont disponibles qu’une fois les problèmes identifiés.
+			<br>
+			<br>
+			Les entreprises attaquées par une faille d’exploitation zero-day peuvent voir apparaître un trafic inattendu ou une activité d’analyse suspecte provenant d’un client ou d’un service. <br>
+			Exemples de techniques de détection zero-day :
+			<br>
+			<br>
+			1.	Utilisation des bases de données existantes de programmes malveillants et comportement de référence. Même si ces bases de données sont mises à jour très rapidement et peuvent servir de point de référence, les failles d’exploitation zero-day sont par définition nouvelles et inconnues. Il existe donc une limite à la quantité d’informations qu’une base de données existante peut vous fournir. <br>
+			2.	D’autres techniques recherchent les caractéristiques du programme malveillant zero-day sur la base de leur interaction avec le système cible. Au lieu d’examiner le code des fichiers entrants, cette technique recherche leurs interactions avec le logiciel existant et tente de déterminer si elles résultent d’actions malveillantes.<br>
+			3.	Le Machine Learning est de plus en plus utilisé pour détecter les données des failles d’exploitation précédemment enregistrées en vue d’établir un référentiel de comportements système sécurisés à partir des données des interactions passées et actuelles avec le système. Plus les données disponibles sont nombreuses, plus la détection est fiable.<br>
+			<br>
+
 		</div>
 	</div>
 
@@ -69,7 +157,7 @@
 	<!-- POPUP -->
     <div class="popup-bg" id="popupBg"></div>
     <div class="popup" id="popup">
-        <div class"popup-header">
+        <div class="popup-header">
             <h3 align="center">Sources</h3>
             <i class="fas fa-times close" id="close"></i>
         </div>
